fixed: container items align to the end

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
     background-color: rgb(122, 122, 187);
     font-size: 20px;
     text-emphasis: center;
+    align-items: end;
 }
 
 #container::shadow {
